--- a/style.css
+++ b/style.css
@@ -1,12 +1,104 @@
+@import url('https://fonts.googleapis.com/css2?family=GFS+Didot&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face {
+    font-family: 'nyght';
+    src: url(fonts/NyghtSerif-Medium.woff) format('woff'),
+         url(fonts/NyghtSerif-Medium.woff2) format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'nyght';
+    src: url(fonts/NyghtSerif-RegularItalic.woff) format('woff'),
+         url(fonts/NyghtSerif-RegularItalic.woff2) format('woff2');
+    font-weight: normal;
+    font-style: italic;
+}
+
+body{
+    font-family: 'poppins';
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    color: rgb(213, 213, 213);
+    background: rgb(14, 14, 14);
+
+}
+
+#header{
+    font-family: 'nyght',serif;
+    font-style: italic;
+    font-size: 10vh;
+    margin: 2vh;
+    margin-bottom: 5vh;
+    border-bottom: 2px solid rgb(213, 213, 213);
+}
+
+
+
+form{
+    /* align-self: center; */
+    margin-top: 5vh;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    row-gap: 40px;
+    column-gap: 100px;
+}
+
+form>div{
+    grid-column: span 2;
+}
+form>div>label{
+    padding-right: 30px;
+}
+
+#submit{
+    grid-column: 2/4;
+}
+
+input{
+    font-family: inherit;
+    outline: none;
+    color: inherit;
+    font-size: inherit;
+    border-style: none;
+    background: none;
+    border-bottom: 1px solid rgb(213, 213, 213) ;
+    /* appearance: none; */
+}
+
+button{
+    font-family: inherit;
+    background: rgb(234, 233, 233);
+    color: rgb(14, 14, 14);
+    font-family: 'nyght',serif;
+    font-style: italic;
+
+    /* border: 4px solid rgb(213, 213, 213); */
+    border-radius: 20px;
+    font-size: 60px;
+    /* font-weight: 700; */
+    padding: 10px;
+
+}
+
+
 #gameBoard{
-    height: 60vh;
-    width: 60vh;
-    background-color: black;
+    height: 50vh;
+    width: 50vh;
+    background-color: rgb(234, 233, 233);
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,1fr);
+    gap: 2.5px;
 }
 .cell{
-    background-color: rgb(118, 118, 118);
-    border: 1px solid;
+    background-color: rgb(14, 14, 14);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 10vh;
+    /* border: 1px solid; */
 }
